--- a/public/timer.html
+++ b/public/timer.html
@@ -42,11 +42,8 @@
     <div class="text-body">
       Start a study timer and Bake some sweets (˶˃ ᵕ ˂˶)
       <div class="container">
-        <div class=" "cat-stack">
-          <img src="assets/menu.png" alt="cat" class="overlay"   style="height: 110px; width:auto;image-rendering: pixelated;"/>
-          <img src="assets/sittingCat.gif" alt="cat" class="bottom-item"   style="height: 340px; width: 340px;image-rendering: pixelated;"/>
-        </div>
-        <button class="brown-button" id="start-button">Start</button>
+        <img src="assets/sleepingCat.gif" alt="cat" class="bottom-item"   style="height: 330px; width: 330px;image-rendering: pixelated;"/>
+        <button class="brown-button" id="focus-button">Focus</button>
     </div>
   </body>
 </html>
