--- a/public/index.html
+++ b/public/index.html
@@ -2,51 +2,9 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
-    <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <meta name="theme-color" content="#000000" />
-    <meta
-      name="description"
-      content="Web site created using create-react-app"
-    />
-    <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
-
-    <!--
-      manifest.json provides metadata used when your web app is installed on a
-      user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
-    -->
-    <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
-    <!--
-      Notice the use of %PUBLIC_URL% in the tags above.
-      It will be replaced with the URL of the `public` folder during the build.
-      Only files inside the `public` folder can be referenced from the HTML.
-
-      Unlike "/favicon.ico" or "favicon.ico", "%PUBLIC_URL%/favicon.ico" will
-      work correctly both with client-side routing and a non-root public URL.
-      Learn how to configure a non-root public URL by running `npm run build`.
-    -->
     <title>Sugar & Focus</title>
   </head>
   <body>
-    <!-- the header -->
-    <div class="header">
-      <h1 class="title">Sugar & Focus</h1>
-      <div id ="headerphotos"></div>
-      <button id="photoButton">
-        <img src="assets/minus.png" alt="Photo Icon" class="button-icon" />
-      </button>
-      <button id="photoButton">
-        <img src="assets/x.png" alt="Photo Icon" class="button-icon" />
-      </button>
-    </div>
-    <div class="text-body">
-      Start a study timer and Bake some sweets (˶˃ ᵕ ˂˶)
-      <div class="container">
-        <div class=" "cat-stack">
-          <img src="assets/menu.png" alt="cat" class="overlay"   style="height: 110px; width:auto;image-rendering: pixelated;"/>
-          <img src="assets/sittingCat.gif" alt="cat" class="bottom-item"   style="height: 340px; width: 340px;image-rendering: pixelated;"/>
-        </div>
-        <button class="brown-button" id="start-button">Start</button>
-    </div>
+    <div id="root"></div> <!-- React renders here -->
   </body>
 </html>
